--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Django>=2.2.9
+Django>=3.0.3
 django-userforeignkey~=0.3.0
-django-simple-history~=2.6.0
-djangorestframework~=3.9.0
+django-select2~=7.2.0
+django-simple-history~=2.8.0
+djangorestframework~=3.11.0
 Markdown~=3.0.1
 django_filter~=2.0.0
 mysqlclient~=1.4.6
-pytz~=2018.7
+pytz~=2018.9
