--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,37 @@
-Django>=3.0.3
-django-userforeignkey~=0.3.0
-django-select2~=7.2.0
-django-simple-history~=2.8.0
-djangorestframework~=3.11.0
-Markdown~=3.0.1
-django_filter~=2.0.0
-mysqlclient~=1.4.6
-pytz~=2018.9
-numpy~=1.19.1
-pandas~=1.1.1
-python-dateutil~=2.8.1
-django-allauth>=0.41.0
-django-debug-toolbar>=2.2
+asgiref==3.4.1
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+cryptography==3.4.7
+cycler==0.10.0
+defusedxml==0.7.1
+Django==3.2.6
+django-allauth==0.45.0
+django-appconf==1.0.4
+django-debug-toolbar==3.2.2
+django-filter==2.0.0
+django-select2==7.2.4
+django-simple-history==2.8.0
+django-userforeignkey==0.3.0
+djangorestframework==3.11.2
+idna==3.2
+kiwisolver==1.3.1
+Markdown==3.0.1
+matplotlib==3.4.3
+mpltern==0.3.3
+mysqlclient==1.4.6
+numpy==1.19.5
+oauthlib==3.1.1
+pandas==1.1.5
+Pillow==8.3.1
+pycparser==2.20
+PyJWT==2.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2018.9
+requests==2.26.0
+requests-oauthlib==1.3.0
+six==1.16.0
+sqlparse==0.4.1
+urllib3==1.26.6
