development environment documentation & cleanup

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.9-slim AS compile-image
 
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 RUN apt-get update && \
     apt-get install -y build-essential gcc default-libmysqlclient-dev && \
     useradd -m user
@@ -12,6 +15,9 @@ RUN pip install --upgrade pip && \
     pip install --user -r requirements.txt
 
 FROM python:3.9-slim AS build-image
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /src/app
 
@@ -30,4 +36,4 @@ ENV PATH=/home/user/.local/bin:$PATH
 
 COPY . .
 
-CMD ["sh", "./scripts/entrypoint-dev.sh"]
+CMD ["sh", "./scripts/entrypoint.sh"]
