--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,33 @@
 server {
-    listen 80;
+    listen 80 default_server;
+
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name ${RNAMES_DOMAIN};
+    ssl_certificate /certs/cert.pem;
+    ssl_certificate_key /certs/key.pem;
 
     location / {
-        proxy_pass http://app:8000;
+        proxy_pass http://web:8000;
     }
 
     location /static/ {
         alias /vol/web/static/;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name ${PMA_DOMAIN};
+    ssl_certificate /certs/cert.pem;
+    ssl_certificate_key /certs/key.pem;
+
+    location / {
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_pass http://phpmyadmin:80;
     }
 }
