--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,6 +13,10 @@ server {
 
     location / {
         proxy_pass http://web:8000;
+        proxy_set_header  Host               $host;
+        proxy_set_header  X-Real-IP          $remote_addr;
+        proxy_set_header  X-forwarded        $proxy_add_x_forwarded_for;
+        proxy_set_header  X-Forwarded-Proto  https;
     }
 
     location /static/ {
@@ -26,8 +30,13 @@ server {
     ssl_certificate /certs/cert.pem;
     ssl_certificate_key /certs/key.pem;
 
+    client_max_body_size  10M;
+
     location / {
-        proxy_set_header X-Forwarded-Proto https;
         proxy_pass http://phpmyadmin:80;
+        proxy_set_header  Host               $host;
+        proxy_set_header  X-Real-IP          $remote_addr;
+        proxy_set_header  X-forwarded        $proxy_add_x_forwarded_for;
+        proxy_set_header  X-Forwarded-Proto  https;
     }
 }
