--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,15 +4,22 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 RUN apt-get update && \
-    apt-get install -y build-essential gcc default-libmysqlclient-dev && \
+    apt-get install -y build-essential gcc default-libmysqlclient-dev nodejs npm && \
     useradd -m user
 
 USER user
 
 COPY requirements.txt .
-
 RUN pip install --upgrade pip && \
     pip install --user -r requirements.txt
+
+USER root
+
+COPY ./frontend /home/user/frontend
+WORKDIR /home/user/frontend
+RUN npm ci && npm run build
+
+# ---------------------------------
 
 FROM python:3.9-slim AS build-image
 
@@ -35,5 +42,7 @@ COPY --from=compile-image /home/user/.local /home/user/.local
 ENV PATH=/home/user/.local/bin:$PATH
 
 COPY . .
+
+COPY --from=compile-image /home/user/frontend/static /src/app/frontend/static
 
 CMD ["sh", "./scripts/entrypoint.sh"]
