--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^2.4.1",
     "redux-devtools-extension": "^2.13.9",
     "webpack-cli": "^4.8.0"
   }
