--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,12 @@ server {
     ssl_certificate /certs/cert.pem;
     ssl_certificate_key /certs/key.pem;
 
+    client_body_timeout 300;
+    client_header_timeout 300;
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
+
     location / {
         proxy_pass http://web:8000;
         proxy_set_header  Host               $host;
@@ -31,6 +37,11 @@ server {
     ssl_certificate_key /certs/key.pem;
 
     client_max_body_size  10M;
+    client_body_timeout 300;
+    client_header_timeout 300;
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
 
     location / {
         proxy_pass http://phpmyadmin:80;
