--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,7 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "eject": "react-scripts eject",
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production",
@@ -42,8 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/user-event": "^13.5.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
+    "jest": "^26.6.0",
     "prettier": "^2.4.1",
     "redux-devtools-extension": "^2.13.9",
     "webpack-cli": "^4.8.0"
