--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -50,5 +50,11 @@
     "prettier": "^2.4.1",
     "redux-devtools-extension": "^2.13.9",
     "webpack-cli": "^4.8.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/src/__mocks__/styleMock.js"
+    }
   }
 }
