--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -49,6 +49,7 @@
     "jest": "^26.6.0",
     "prettier": "^2.4.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "webpack-cli": "^4.8.0"
   },
   "jest": {
